# repoarchitect-ai

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routes/: upload.py
app/core/: config.py
app/models/: dto.py
app/services/: llm_service_review.py  scan_service.py  zip_service.py  zip_services.py
